[tool.poetry]
name = "index"
version = "0.1.0"
description = ""
authors = ["FFFarruh <fffarruh@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.1"
pydantic = "^1.9.0"
psycopg = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
